// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`clone I debug 1`] = `
{
  "person": {
    "age": 21,
    "details": {
      "dateOfBirth": 2001-12-22T00:00:00.000Z,
      "favoriteFood": "sushi",
    },
    "name": "John",
    "nameRegex": /\\^jo/iu,
    "nameValid": true,
    "nameValidator": [Function],
  },
  "personCopy": {
    "age": 42,
    "details": {
      "dateOfBirth": 2001-12-22T00:00:00.000Z,
      "favoriteFood": "sushi",
    },
    "name": "John",
    "nameRegex": /\\^jo/iu,
    "nameValid": true,
    "nameValidator": [Function],
  },
}
`;

exports[`flatten A object 1`] = `
{
  "age": 21,
  "details.dateOfBirth": 2001-12-22T00:00:00.000Z,
  "details.favoriteFood": "sushi",
  "name": "John",
  "nameRegex": /\\^jo/iu,
  "nameValid": true,
  "nameValidator": [Function],
}
`;

exports[`flatten B object with a custom root path 1`] = `
{
  "person.age": 21,
  "person.details.dateOfBirth": 2001-12-22T00:00:00.000Z,
  "person.details.favoriteFood": "sushi",
  "person.name": "John",
  "person.nameRegex": /\\^jo/iu,
  "person.nameValid": true,
  "person.nameValidator": [Function],
}
`;

exports[`flatten C object containing an array 1`] = `
{
  "collection[0]": "pikachu",
  "collection[1]": "drake",
  "name": "John",
}
`;

exports[`objectSort C sort a complex object with null, undefined, etc 1`] = `
{
  "alpaca": {
    "c1": 11,
    "c2": 22,
    "c3": 33,
    "c4": undefined,
  },
  "keyA": undefined,
  "keyB": 2,
  "keyC": 3,
  "names": [
    "john",
    null,
    [
      {
        "b2": 2,
        "c3": 3,
      },
    ],
    "eddy",
  ],
  "zebra": {
    "z1": 11,
    "z2": null,
    "z3": 33,
  },
}
`;
